--- a/HTML5 & CSS3/index.html
+++ b/HTML5 & CSS3/index.html
@@ -6,7 +6,6 @@
     <title>E-Commerce Site</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 <body>
     <!-- Header -->
@@ -21,6 +20,7 @@
                 <li><a href="#" class="cart">Cart (0)</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <!-- Hero Section -->
@@ -33,6 +33,7 @@
     <!-- Products Section -->
     <section class="products">
         <h2>Featured Products</h2>
+        
         <div class="product-grid" id="product-grid">
             <!-- Product cards will be generated here -->
         </div>
@@ -42,38 +43,39 @@
     <div class="modal" id="product-modal">
         <div class="modal-content">
             <span class="close-btn" id="close-modal">&times;</span>
-            <img src="images/hik1.webp" alt="Product Image" id="modal-img">
+            <img src="" alt="Product Image" id="modal-img">
             <h3 id="modal-title">Product Title</h3>
             <p id="modal-price">$0.00</p>
             <button class="add-to-cart-modal">Add to Cart</button>
         </div>
     </div>
-    <!-- Footer Section -->
-<footer class="footer">
-    <div class="footer-container">
-        <div class="footer-logo">
-            <h1>LAITI Site</h1>
-        </div>
-        <nav class="footer-nav">
-            <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </nav>
-        <div class="footer-social">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>&copy;Gilbert@2024.All rights reserved.</p>
-    </div>
-</footer>
 
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <h1>LAITI Site</h1>
+            </div>
+
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+            <div class="footer-social">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; Gilbert @ 2024. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="index.js"></script>
 </body>
